--- a/templates/stream.html
+++ b/templates/stream.html
@@ -1,19 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>flipped. | Stream</title>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="img/icon.png"/>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/icheck.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/site.css">
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
     <style>
     header{
     	margin-top: 30px;
@@ -26,6 +11,14 @@
     }
     .classes-btn{
         margin-top: 90px;
+        margin-bottom: 40px;
+      }
+      .lecture-btn{
+        background: #A0D468;
+        border: 0px;
+      }
+      .lecture-btn:hover{
+        background: #8CC152;
       }
     .options{
       background: #F0F0F0;
@@ -36,8 +29,6 @@
       color: black;
     }
     </style>
-</head>
-<body>
 	<div class="container">
 		<!-- Header -->
 	  <header>
@@ -71,6 +62,8 @@
               <li><a href="#">Add more classes</a></li>
             </ul>
           </div>
+          <!-- Go to lecture button -->
+          <button class="btn btn-lg btn-primary lecture-btn">Go to lecture</button>
           <br>
           <div class="options">
             <h5>Options: <i class="fa fa-cog"></i></h5>
@@ -92,7 +85,7 @@
         <ol class="breadcrumb" style="margin-top: 20px">
           <li><a href="#">Home</a></li>
           <li><a href="#">Math 101</a></li>
-          <li class="active">Stream #2</li>
+          <li class="active">Stream #{{streamId}}</li>
         </ol>
 <h2>Math 101 Stream</h2>
 <div class="row">
@@ -163,49 +156,3 @@
 </div>
 </div>
 	<!-- End of container -->
-	<!-- Footer -->
-	<div class="row">
-          <div class="col-md-12">
-            <div class="footer">
-              <div class="container">
-                <div class="clearfix">
-                  <div class="footer-logo"><a href="#">flipped.</a></div>
-                  <dl class="footer-nav">
-                    <dt class="nav-title">PORTFOLIO</dt>
-                    <dd class="nav-item"><a href="#">Web Design</a></dd>
-                    <dd class="nav-item"><a href="#">Branding &amp; Identity</a></dd>
-                    <dd class="nav-item"><a href="#">Mobile Design</a></dd>
-                    <dd class="nav-item"><a href="#">Print</a></dd>
-                    <dd class="nav-item"><a href="#">User Interface</a></dd>
-                  </dl>
-                  <dl class="footer-nav">
-                    <dt class="nav-title">ABOUT</dt>
-                    <dd class="nav-item"><a href="#">The Company</a></dd>
-                    <dd class="nav-item"><a href="#">History</a></dd>
-                    <dd class="nav-item"><a href="#">Vision</a></dd>
-                  </dl>
-                  <dl class="footer-nav">
-                    <dt class="nav-title">GALLERY</dt>
-                    <dd class="nav-item"><a href="#">Flickr</a></dd>
-                    <dd class="nav-item"><a href="#">Picasa</a></dd>
-                    <dd class="nav-item"><a href="#">iStockPhoto</a></dd>
-                    <dd class="nav-item"><a href="#">PhotoDune</a></dd>
-                  </dl>
-                  <dl class="footer-nav">
-                    <dt class="nav-title">CONTACT</dt>
-                    <dd class="nav-item"><a href="#">Basic Info</a></dd>
-                    <dd class="nav-item"><a href="#">Map</a></dd>
-                    <dd class="nav-item"><a href="#">Conctact Form</a></dd>
-                  </dl>
-                </div>
-                <div class="footer-copyright text-center">Copyright &copy; 2015 flipped.</div>
-              </div>
-            </div>
-          </div>
-	<!-- Scripts -->
-	<script src="js/icheck.min.js"></script>
-	<script src="js/jquery.fs.stepper.min.js"></script>
-	<script src="js/jquery.fs.selecter.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-</body>
-</html>
