--- a/templates/lecture_list.html
+++ b/templates/lecture_list.html
@@ -60,14 +60,24 @@
         <ol class="breadcrumb" style="margin-top: 20px">
           <li><a href="#">Home</a></li>
           <li><a href="#">Math 101</a></li>
-          <li class="active">Lecture #{{lectureId}}</li>
         </ol>
-          <h2>Math 101 - Lecture 2</h2>
+          <h2>Math 101 - Lecture List</h2>
             <!-- Video -->
-            <div class="video"><i class="fa fa-play-circle fa-5x"></i></div>
-            <hr>
-          <h2>Questions</h2>
-            <h4>How many cats did you see in the video?</h4>
+            <div class="list-group">
+              <a href="#/lecture/123/456" class="list-group-item active">
+                <h4 class="list-group-item-heading">List group item heading</h4>
+                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+              </a>
+              <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">List group item heading</h4>
+                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+              </a>
+              <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">List group item heading</h4>
+                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </content>
