Added home link

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -1,5 +1,7 @@
-<head>
     <style>
+    h3 a{
+        color: black;
+      }
 	.welcome{
 		margin-bottom: 40px;
 	}
@@ -22,7 +24,7 @@
     <!-- Header -->
     <header>
      <div class="row">
-      <div class="col-md-9"><h3>flipped.</h3></div>
+      <div class="col-md-9"><h3><a href="#/">flipped.</a></h3></div>
       <div class="col-md-3" style="padding-top: 30px">
                     <div class="btn-group">
             <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-home"></i></button>
