--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,23 @@
+	<style>
+	h3 a{
+        color: black;
+      }
+      </style>
 	<div class="container">
 		<!-- Header -->
 		<header>
 			<div class="row">
-				<div class="col-md-8"><h1>flipped.</h3></div>
+				<div class="col-md-8"><h3><a href="#/">flipped.</a></h3></div>
 				<div class="col-md-4" style="padding-top: 30px">
 					<div class="btn-group">
-                  <button type="button" class="btn btn-primary btn-lg">Student sign up.</button>
-                  <button type="button" class="btn btn-primary btn-lg">Teacher sign up.</button>
+                  <a type="button" class="btn btn-primary btn-lg" href="#/signup/student">Student sign up.</a>
+                  <a type="button" class="btn btn-primary btn-lg" href="#/signup/teacher">Teacher sign up.</a>
                 </div>
 				</div>
 			</div>
 		</header>
       <div class="gap">
         Let's turn things on their head.<br>
-        <button class="btn btn-lg btn-primary btn-login">Login.</button>
+        <a class="btn btn-lg btn-primary btn-login" href="#/login">Login.</a>
       </div>
 	</div>
