--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,7 @@
       <style>
+      h3 a{
+        color: black;
+      }
       header{
         margin-top: 30px;
       }
@@ -17,7 +20,7 @@
     <!-- Header -->
     <header>
      <div class="row">
-      <div class="col-md-9"><h3>flipped.</h3></div>
+      <div class="col-md-9"><h3><a href="#/">flipped.</a></h3></div>
       </div>
     </header>
     <!-- Start of Content -->
