--- a/templates/stream.html
+++ b/templates/stream.html
@@ -1,5 +1,7 @@
-
-    <style>
+<style>
+    h3 a{
+        color: black;
+      }
     header{
     	margin-top: 30px;
     }
@@ -33,7 +35,7 @@
 		<!-- Header -->
 	  <header>
      <div class="row">
-      <div class="col-md-9"><h3>flipped.</h3></div>
+      <div class="col-md-9"><h3><a href="#/">flipped.</a></h3></div>
       <div class="col-md-3" style="padding-top: 30px">
           <div class="btn-group">
             <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-home"></i></button>
