--- a/templates/login.html
+++ b/templates/login.html
@@ -26,10 +26,10 @@
     <!-- Start of Content -->
     <content>
       <h1>Hello. Welcome back.</h1>
-      <form>
-        <input type="text" class="form-control input-lg" placeholder="Username" name="username">
-        <input type="password" class="form-control input-lg" placeholder="Password" name="password">
-        <button class="btn btn-lg btn-primary">Enter.</button>
+      <form ng-submit="login()">
+        <input type="text" class="form-control input-lg" placeholder="Username" name="username" ng-model="user.username">
+        <input type="password" class="form-control input-lg" placeholder="Password" name="password" ng-model="user.password">
+        <input type="submit" class="btn btn-lg btn-primary" value="Enter.">
       </form>
     </content>
   </div>
