--- a/templates/make.html
+++ b/templates/make.html
@@ -17,6 +17,16 @@
       .form-control{
         margin-bottom: 10px;
       }
+      .shoutout-btn{
+        width: 100%;
+        margin-top: 20px;
+        background: #A0D468;
+        border: #A0D468;
+        font-size: 30pt;
+      }
+      .shoutout-btn:hover{
+        background: #8CC152;
+      }
       </style>
       <div class="container">
         <!-- Header -->
@@ -37,6 +47,7 @@
     <content>
       <div class="row" style="height: 500px">
         <div class="col-md-3">
+          <button class="btn btn-primary btn-lg fa-5x shoutout-btn"><i class="fa fa-envelope-o"></i></button>
         </div>
         <!-- End of sidebar -->
         <div class="col-md-9">
