--- a/templates/shoutout.html
+++ b/templates/shoutout.html
@@ -1,4 +1,7 @@
       <style>
+      h1{
+        text-align: center;
+      }
       h3 a{
         color: black;
       }
@@ -27,6 +30,10 @@
       .shoutout-btn:hover{
         background: #8CC152;
       }
+      .content{
+        padding-top: 150px;
+        min-height: 600px;
+      }
       </style>
       <div class="container">
         <!-- Header -->
@@ -45,30 +52,18 @@
     </header>
     <!-- Start of Content -->
     <content>
-      <div class="row" style="height: 500px">
-        <div class="col-md-3">
-          <a ng-href="#/shoutout/{{classId}}" class="btn btn-primary btn-lg fa-5x shoutout-btn"><i class="fa fa-envelope-o"></i></a>
-        </div>
-        <!-- End of sidebar -->
-        <div class="col-md-9">
-          <!-- Breadcrums -->
-          <ol class="breadcrumb" style="margin-top: 20px">
-            <li><a href="#">Home</a></li>
-            <li class="active">Class {{classId}}</li>
-          </ol>
-          <h2>Lecture Creator</h2>
-          <br><form ng-submit="postLecture()">
-          <input type="text" class="form-control input-lg" placeholder="YouTube link" ng-model="lecture.youtube">
-          <h3>Question:</h3>
-          <input type="text" class="form-control" placeholder="Question text." ng-model="lecture.question">
-          <h3>Answers:</h3>
-          <input type="text" class="form-control" placeholder="A." ng-model="lecture.answerA">
-          <input type="text" class="form-control" placeholder="B." ng-model="lecture.answerB">
-          <input type="text" class="form-control" placeholder="C." ng-model="lecture.answerC">
-          <input type="text" class="form-control" placeholder="D." ng-model="lecture.answerD">
-          <input type="submit" value="Post New Lecture" class="btn btn-primary">
-          </form>
-        </div>
+      <!-- Breadcrums -->
+        <ol class="breadcrumb" style="margin-top: 20px">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Math 101</a></li>
+          <li class="active">Shoutout for #{{classId}}</li>
+        </ol>
+      <div class="content">
+        <h1>Sending shoutout to 11 students.</h1>
+        <form ng-submit="sendText()">
+        <textarea class="form-control" rows="3" style="resize: none;">Enter a text message which will be broadcast to the whole class.</textarea>
+        <button class="btn btn-primary btn-lg fa-5x shoutout-btn"><i class="fa fa-envelope-o"></i></button>
+        </form>
       </div>
     </content>
   </div>
