finish initial moxtra integration

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -15,8 +15,9 @@
         Let's turn things on their head.<br>
         <button class="btn btn-lg btn-primary btn-login">Login.</button>
 
-        <moxtra-chat container-id="my-chat-container" text="Chat" frame-width="100%" frame-height="100%" session-info="sessionInfo" email="fotoflo@gmail.com"> </moxtra-chat>
+        <div id="moxtra-chat-container">
 
-
+          <h1>chat goes here</h1>
+        </div>
       </div>
 	</div>
