--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>NodeJS Starter Application</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../public/stylesheets/style.css">
   </head>
+
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <table>
+      <tr>
+        <td style= "width:30%;">
+          <img class = "newappIcon" src="../public/images/newapp-icon.png">
+        <td>
+            <h1>Hi there!</h1>
+          <p>Thanks for creating a
+            <span class = "blue">NodeJS Starter Application</span>.
+            Get started by reading our
+            <a href = "https://www.ng.bluemix.net/docs/index.ejs#starters/nodejs/index.html#nodejs">documentation</a>
+            or use the Start Coding guide under your app in your dashboard. Hello World
+    </table>
   </body>
+
 </html>
