--- a/public/templates/lecture_list.html
+++ b/public/templates/lecture_list.html
@@ -66,19 +66,19 @@
         </ol>
           <h2>Math 101 - Lecture List</h2>
             <!-- Video -->
-            <div class="list-group">
-              <a href="#/lecture/123/456" class="list-group-item active">
-                <h4 class="list-group-item-heading">List group item heading</h4>
+            <div class="list-group" ng-repeat="lectureTitle in lectureList">
+              <a  class="list-group-item " ng-click="lectureClick(lectureTitle)">
+                <h4 class="list-group-item-heading">{{lectureTitle}}</h4>
                 <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
               </a>
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">List group item heading</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-              </a>
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">List group item heading</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-              </a>
+              <!--<a href="#" class="list-group-item">-->
+                <!--<h4 class="list-group-item-heading">List group item heading</h4>-->
+                <!--<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>-->
+              <!--</a>-->
+              <!--<a href="#" class="list-group-item">-->
+                <!--<h4 class="list-group-item-heading">List group item heading</h4>-->
+                <!--<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>-->
+              <!--</a>-->
             </div>
           </div>
         </div>
