--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/factories/authFactory.js"></script>
+  <script src="js/factories/classFactory.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/site.css">
     <!--[if lt IE 9]>
