--- a/public/templates/classes.html
+++ b/public/templates/classes.html
@@ -120,7 +120,7 @@
 			</div>
 			<div class="modal-body">
 				<form ng-submit="teacherAddClass()">
-					<input type="text" class="input-group input-lg" placeholder="Class ID" style="width: 100%" ng-model="class.name"><br>
+					<input type="text" class="input-group input-lg" placeholder="Class Name" style="width: 100%" ng-model="class.name"><br>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
