Added YouTube video

--- a/public/templates/lecture.html
+++ b/public/templates/lecture.html
@@ -13,13 +13,16 @@
       }
       .video{
         width: 100%;
-        height: 400px;
         color: #48CFAD;
         background: #37BC9B;
-        padding-top: 150px;
+        padding: 20px;
         text-align: center;
         font-size: 20pt;
         margin-bottom: 30px;
+      }
+      .video iframe{
+        width: 100%;
+        height: 400px;
       }
     </style>
    <div class="container">
@@ -67,7 +70,9 @@
         </ol>
           <h2>Math 101 - Lecture 2</h2>
             <!-- Video -->
-            <div class="video"><i class="fa fa-play-circle fa-5x"></i></div>
+            <div class="video">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/_60sKaoRmhU" frameborder="0" allowfullscreen></iframe>
+            </div>
             <hr>
           <h2>Questions</h2>
             <h4>How many cats did you see in the video?</h4>
