--- a/public/templates/lecture.html
+++ b/public/templates/lecture.html
@@ -24,6 +24,22 @@
         width: 100%;
         height: 400px;
       }
+      .questions{
+        padding-bottom: 100px;
+        padding-left: 30px;
+        padding-right: 30px;
+      }
+      .question{
+        margin-bottom: 20px;
+        font-size: 12pt;
+      }
+      .questions input[type='radio']{
+        ms-transform: scale(2); /* IE */
+        -moz-transform: scale(2); /* FF */
+        -webkit-transform: scale(2); /* Safari and Chrome */
+        -o-transform: scale(2);
+        margin-right: 20px;
+      }
     </style>
    <div class="container">
     <!-- Header -->
@@ -76,6 +92,13 @@
             <hr>
           <h2>Questions</h2>
             <h4>How many cats did you see in the video?</h4>
+            <div class="questions">
+              <div class="question"><label><input type="radio" id="flat-radio-2" name="answer"> Some answer A</label></div>
+              <div class="question"><label><input type="radio" id="flat-radio-2" name="answer"> Some answer B</label></div>
+              <div class="question"><label><input type="radio" id="flat-radio-2" name="answer"> Some answer C</label></div>
+              <div class="question"><label><input type="radio" id="flat-radio-2" name="answer"> Some answer D</label></div>
+              <button class="btn btn-primary">Submit</button>
+            </div>
         </div>
       </div>
     </content>
