Fixed shotout button

--- a/public/templates/make.html
+++ b/public/templates/make.html
@@ -47,7 +47,7 @@
     <content>
       <div class="row" style="height: 500px">
         <div class="col-md-3">
-          <a ng-href="#/shoutout/{{classId}}" class="btn btn-primary btn-lg fa-5x shoutout-btn"><i class="fa fa-envelope-o"></i></a>
+          <a href="#/shoutout/{{classId}}" class="btn btn-primary btn-lg fa-5x shoutout-btn"><i class="fa fa-envelope-o"></i></a>
         </div>
         <!-- End of sidebar -->
         <div class="col-md-9">
