Added stream button

--- a/public/templates/lecture.html
+++ b/public/templates/lecture.html
@@ -40,6 +40,14 @@
         -o-transform: scale(2);
         margin-right: 20px;
       }
+      .lecture-btn{
+        margin-top: 40px;
+        background: #A0D468;
+        border: 0px;
+      }
+      .lecture-btn:hover{
+        background: #8CC152;
+      }
     </style>
    <div class="container">
     <!-- Header -->
@@ -75,6 +83,8 @@
               <li><a href="#">Add more classes</a></li>
             </ul>
           </div>
+          <!-- Go to lecture button -->
+      <a class="btn btn-lg btn-primary lecture-btn" href="#/stream/{{classId}}">Go to stream</a>
         </div>
         <!-- End of sidebar -->
         <div class="col-md-9">
