--- a/public/templates/stream.html
+++ b/public/templates/stream.html
@@ -65,7 +65,7 @@ img{
         </ul>
       </div>
       <!-- Go to lecture button -->
-      <button class="btn btn-lg btn-primary lecture-btn">Go to lecture</button>
+      <a class="btn btn-lg btn-primary lecture-btn" href="#/lecture/{{classId}}">Go to lecture</a>
       <br>
       <div class="options">
         <h5>Options: <i class="fa fa-cog"></i></h5>
