Fixed stream in breadcrums

--- a/public/templates/stream.html
+++ b/public/templates/stream.html
@@ -87,7 +87,7 @@ img{
       <ol class="breadcrumb" style="margin-top: 20px">
         <li><a href="#">Home</a></li>
         <li><a href="#">Math 101</a></li>
-        <li class="active">Stream #{{streamId}}</li>
+        <li class="active">Stream {{classId}}}</li>
       </ol>
       <h2>Math 101 Stream</h2>
       <div class="row">
